# Batchnorm-relu-kernel-fusion

./: .gitignore  CMakeLists.txt  Makefile  README.md  model.py  module.py  setup.py  train.py
python/: CMakeLists.txt  bindings.py  testcpp.cpp
src/: CMakeLists.txt  binder.cpp  fuse_kernel_backward.cu  fuse_kernel_backward.h  fused_kernel_backward.cu  fused_kernel_backward.h  fused_kernel_forward.cu  fused_kernel_forward.h  fused_ops.cpp  fused_ops_kernel.cu  fused_ops_kernel.h
